@@ -57,6 +57,10 @@ CHANGES
       added to a mapper post-compile using 
       add_property() or equivalent.
 
+    - Fixed bug where many-to-many relation() with
+      viewonly=True would not correctly reference the
+      link between secondary->remote.
+      
     - Duplicate items in a list-based collection will
       be maintained when issuing INSERTs to
       a "secondary" table in a many-to-many relation.
